# dp-storage-jsondb-service

./: .env.example  .zenodo.json  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  README.md  docker-compose.mariadb.yml  docker-compose.mysql.yml  docker-compose.postgres.yml
.forgejo/workflows/: release.yml
.github/workflows/: create-release.yml
docs/: SUMMARY.md  architecture.md  authentication.md  book.toml  configuration.md  database-backends.md  deployment.md  http-contract.md  index.md  operations.md  query-language.md  testing.md
migrations/: 0001_init.sql
migrations/mysql/: 0001_init.sql
migrations/postgres/: 0001_init.sql
scripts/: docker-compose.test.mysql.yml  docker-compose.test.postgres.yml  test-mariadb.sh  test-mysql.sh  test-postgres.sh
src/: app.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs  query.rs  repository.rs
src/repository/: sql_backend.rs  sql_mysql.rs  sql_postgres.rs  sql_runtime.rs
tests/: integration_db.rs
