[package]
name = "dp-storage-jsondb-service"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
publish = false

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
http = "1.3.1"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["chrono", "json", "macros", "mysql", "postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
